@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-16T08:12:50Z",
-  "count_outdated" : 1042,
-  "uniques_outdated" : 661,
+  "timestamp" : "2023-10-16T16:12:06Z",
+  "count_outdated" : 1044,
+  "uniques_outdated" : 662,
   "count" : 1080,
   "uniques" : 687,
   "clones" : [
-    {
-      "timestamp": "2023-10-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-03T00:00:00Z",
       "count": 3,
