@@ -1,12 +1,7 @@
 {
-  "count": 37,
+  "count": 36,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-10-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-03T00:00:00Z",
       "count": 3,
