@@ -1,3 +1,12 @@
+2023-10-16T16:12:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6536325019 # 1256
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
+* notice: last 14d: unq all: 5 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 661 1042 / 687 1080
+* notice: next accum: outdated-unq outdated-all / unq all: 662 1044 / 687 1080
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-02] / []
+
 2023-10-16T08:12:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6530825947 # 1255
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
